fix(todolist): 修复Java 8兼容性并成功运行应用
主要修复:
- 添加flyway-mysql依赖支持MySQL 8.0
- 修复JJWT API版本兼容性(0.11.5)
- 修复Spring Security 5.7 API兼容性
- 添加BCryptPasswordEncoder bean
- 修复Java 8兼容性(List.of -> Arrays.asList)
- 修复R<Void>泛型类型问题
- 修复测试代码javax.servlet导入
- 删除被Druid阻止的示例数据迁移文件

应用现在可以在http://localhost:8081成功运行

🤖 Generated with [Claude Code](https://claude.ai/code)
via [Happy](https://happy.engineering)

Co-Authored-By: Claude <noreply@anthropic.com>
Co-Authored-By: Happy <yesreply@happy.engineering>